hyperstack-macros/tests/ui/resolve_errors/unsupported_resolver_type.stderr
error: unknown resolver-backed type 'u64'. Available types: TokenMetadata
 --> tests/ui/resolve_errors/unsupported_resolver_type.rs:8:19
  |
8 |         metadata: u64,
  |                   ^^^
