hyperstack-macros/tests/ui/resolve_errors/unsupported_resolver_type.rs
use hyperstack_macros::hyperstack;

#[hyperstack]
mod broken {
    #[entity(name = "Thing")]
    struct Thing {
        #[resolve(from = "mint")]
        metadata: u64,
    }
}

fn main() {}
